--- a/RestaurantAPI/RestaurantAPI/Properties/launchSettings.json
+++ b/RestaurantAPI/RestaurantAPI/Properties/launchSettings.json
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/restaurant",
+      "launchUrl": "api/restaurant/1",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
